# ytdl_tg_bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  PROGRESS.md  README.md  config.example.toml  docker-compose.yaml  justfile  nohup.out  rustfmt.toml
bot/: Cargo.toml
bot/locales/: en.toml  ru.toml  uk.toml
bot/src/: config.rs  database.rs  di_container.rs  entities.rs  filters.rs  handlers.rs  interactors.rs  locale.rs  main.rs  middlewares.rs  node_router.rs  services.rs  utils.rs  value_objects.rs  worker.rs
bot/src/database/: factories.rs  interfaces.rs  models.rs  repos.rs  tx_manager.rs
bot/src/database/daos/: chat.rs  chat_config.rs  downloaded_media.rs
bot/src/database/interfaces/: chat.rs  chat_config.rs  downloaded_media.rs  tx_manager.rs
bot/src/database/models/: chat_config_exclude_domains.rs  chat_configs.rs  chats.rs  downloaded_media.rs  sea_orm_active_enums.rs
bot/src/database/readers/: chat.rs  chat_config.rs  downloaded_media.rs
bot/src/database/repos/: chat.rs  chat_config.rs  downloaded_media.rs
bot/src/entities/: chat.rs  chat_config.rs  cookie_record.rs  download_job.rs  media.rs  node_router.rs  params.rs  range.rs  sections.rs  yt_toolkit.rs
bot/src/entities/yt_toolkit/: basic_info.rs
bot/src/errors/: base.rs  database.rs
bot/src/errors/database/: common.rs
bot/src/filters/: chosen_inline.rs  exclude_domain.rs  random_cmd.rs  text_url.rs  via_bot.rs
bot/src/handlers/: audio.rs  chosen_inline.rs  config.rs  inline_query.rs  lang.rs  photo.rs  shazam.rs  start.rs  stats.rs  video.rs
bot/src/handlers_utils/: progress.rs  send.rs
bot/src/interactors/: audio.rs  auto.rs  base.rs  chosen_inline.rs  config.rs  downloaded_media.rs  enqueue_download.rs  get_media.rs  inline_query.rs  lang.rs  node_router.rs  photo.rs  send_media.rs  shazam.rs  start.rs  stats.rs  video.rs
bot/src/interactors/download/: media.rs
bot/src/interactors/send_media/: fs.rs  id.rs  upload.rs
bot/src/middlewares/: create_chat.rs  reaction.rs  remove_tracking_params.rs  replace_domains.rs
bot/src/node_router/: tls.rs
bot/src/services/: chat.rs  cookie_assignment.rs  downloaded_media.rs  file_download.rs  get_media.rs  messenger.rs  node_router.rs  queue.rs  send_media.rs  yt_toolkit.rs
bot/src/services/download/: media.rs
bot/src/services/fs/: cookies.rs
bot/src/services/messenger/: telegram.rs
bot/src/services/node_router/: client.rs  handle.rs  selection.rs
bot/src/services/send_media/: id.rs  upload.rs
bot/src/utils/: error.rs  media.rs  startup.rs  text.rs  url.rs
bot/src/value_objects/: chat_type.rs  media_type.rs
charts/bot/: Chart.yaml  values.yaml
charts/cookie-assignment/: Chart.yaml  values.yaml
charts/downloader/: Chart.yaml  values.yaml
charts/infra/: Chart.yaml
configs/: config.example.toml  cookie_assignment.example.toml  downloader.example.toml
cookie_assignment/: Cargo.toml
cookie_assignment/src/: config.rs  cookies.rs  main.rs  node_client.rs  service.rs
cookies/: README.md
deployment/: Dockerfile.bot  Dockerfile.bot.dev  Dockerfile.cookie_assignment  Dockerfile.cookie_assignment.dev  Dockerfile.downloader  Dockerfile.downloader.dev  Dockerfile.migration  Dockerfile.migration.dev  docker-compose.yaml  generate-node-certs.sh
downloader/: Cargo.toml
downloader/src/: config.rs  constants.rs  entities.rs  grpc.rs  main.rs  services.rs  utils.rs
downloader/src/entities/: cookies.rs  gallery_dl.rs  language.rs  media.rs  range.rs  sections.rs
downloader/src/grpc/: auth.rs  capabilities.rs  cookie_manager.rs  downloader.rs  music_resolver.rs  song_recognizer.rs
downloader/src/services/: domain_replacer.rs  ffmpeg.rs  gallery_dl.rs  mutagen.rs  odesli.rs  snapsave.rs  songrec.rs  spotdl.rs  thumbnail.rs  ytdl.rs
downloader/src/utils/: aspect.rs  process.rs
downloader/src/value_objects/: media_type.rs
downloader_client/: Cargo.toml
downloader_client/src/: auth.rs  client.rs  cookie_assignment.rs  download.rs  errors.rs  handle.rs  lib.rs  media_info.rs  recognize.rs  resolve.rs  retry.rs  router.rs  selection.rs
grafana/dashboards/: node_exporter.json  postgres_exporter.json
migration/: .dockerignore  Cargo.toml  Dockerfile  README.md
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251113_100712_remove_chat_from_downloaded_media.rs  m20260112_142259_chat_config.rs  m20260123_213835_add_downloaded_media_language.rs  m20260210_174551_add_downloaded_media_sections.rs  m20260217_205206_add_chat_config_exclude_domains.rs  m20260228_070901_add_chat_config_link_is_visible.rs  m20260301_120000_add_chat_config_language.rs  m20260427_120000_add_chat_type_to_chats.rs  m20260501_000000_add_photo_media_type.rs
proto/: Cargo.toml  build.rs
proto/proto/: downloader.proto
proto/src/: lib.rs
scripts/: build-bot-dev-image.sh  build-cookie-assignment-dev-image.sh  build-downloader-dev-image.sh  build-migration-dev-image.sh  sync-cookies-secret.sh
src/: cmd.rs  config.rs  database.rs  di_container.rs  download.rs  entities.rs  errors.rs  extractors.rs  filters.rs  handlers.rs  handlers_utils.rs  interactors.rs  main.rs  middlewares.rs  models.rs  services.rs  utils.rs  value_objects.rs
src/cmd/: ffmpeg.rs  ffprobe.rs  ytdl.rs
src/database/: daos.rs  enums.rs  models.rs  tx_manager.rs
src/entities/: audio.rs  chat.rs  chat_config.rs  chat_downloaded_media.rs  combined_format.rs  domains.rs  downloaded_media.rs  format.rs  media.rs  params.rs  preferred_languages.rs  range.rs  sections.rs  short_info.rs  url.rs  user.rs  user_downloaded_media.rs  video.rs
src/errors/: base.rs  database.rs  download.rs  download_or_send.rs  format.rs
src/extractors/: config.rs
src/filters/: chosen_inline.rs  exclude_domain.rs  is_correct_url.rs  random_cmd.rs  text_contains_url.rs  text_empty.rs  text_url.rs  via_bot.rs
src/fs/: thumbnail.rs
src/handlers/: audio.rs  chosen_inline.rs  config.rs  download.rs  downloader.rs  inline_query.rs  start.rs  stats.rs  url.rs  video.rs
src/handlers_utils/: download.rs  (+8 more)
victoria-metrics/: scrape.yaml
yt-dlp/: executable
(+94 files in other folders)
