[package]
name = "ytdl_tg_bot"
version = "1.8.0"
edition = "2021"

[dependencies]
telers = { git = "https://github.com/Desiders/telers.git", rev = "4c03a3fa8276aec85e5ea9e2e56845dc9bfa6a13", default-features = false, features = ["default_signal"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "process"] }
tokio-util = "0.7"
nix = { version = "0.29", features = ["fs", "process"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
url = "2.5"
uuid = "1.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
async-trait = "0.1"
tempfile = "3.9"
lazy_static = "1.4"
futures-util = "0.3"
backoff = { version = "0.4", features = ["tokio"] }
bytes = "1.5"
wait-timeout = "0.2"
