[package]
name = "ytdl_tg_bot"
version = "1.16.0"
edition = "2021"

[dependencies]
telers = { version = "1.0.0-alpha.26", features = ["default_signal", "std", "rustls-tls"], default-features = false }
tokio = { version = "1.36", features = ["rt-multi-thread", "process"] }
tokio-util = "0.7"
nix = { version = "0.30", features = ["fs"] }
reqwest = { version = "0.12", features = ["rustls-tls", "charset"], default-features = false }
serde = "1.0"
serde_json = "1.0"
url = "2.5"
uuid = "1.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
tempfile = "3.9"
futures-util = "0.3"
backoff = { version = "0.4", features = ["tokio"] }
toml = "0.8"
