[package]
name = "bot"
version = "5.4.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
backoff = { version = "0.4", features = ["tokio"], default-features = false }
bytes = { version = "1", default-features = false }
downloader_client = { path = "../downloader_client" }
froodi = { version = "1.0.0-beta.17", features = ["async", "thread_safe", "telers"], default-features = false }
futures-util = { version = "0.3", default-features = false }
mutagen-rs = { version = "0.2.5", default-features = false }
nix = { version = "0.31", features = ["fs"], default-features = false }
proto = { path = "../proto" }
psl = { version = "2.1", default-features = false }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager", "streams"], default-features = false }
regex = { version = "1.12", features = ["perf"], default-features = false }
reqwest = { version = "0.13", features = ["rustls", "charset", "query"], default-features = false }
rust-i18n = { version = "4", default-features = false }
sea-orm = { version = "2.0.0-rc.40", features = ["macros", "sqlx-postgres", "runtime-tokio-rustls", "with-time", "with-uuid"], default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
telers = { version = "1.0.0-beta.7", features = ["default-signal", "rustls-tls"], default-features = false }
tempfile = { version = "3.9", default-features = false }
thiserror = { version = "2.0", default-features = false }
time = { version = ">=0.3, <0.3.48", features = ["serde-human-readable"], default-features = false }
tokio = { version = "1.36", features = ["rt-multi-thread", "process", "sync"], default-features = false }
tokio-util = { version = "0.7", default-features = false }
toml = { version = "1.0.6", features = ["parse", "serde"], default-features = false }
tonic = { version = "0.14", features = ["transport", "tls-aws-lc"], default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["registry", "fmt", "ansi", "env-filter"], default-features = false }
url = { version = "2.5", features = ["serde"], default-features = false }
uuid = { version = "1.18", features = ["v7", "fast-rng", "serde"], default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1

[profile.k8s-dev]
inherits = "dev"
opt-level = 1
incremental = true
codegen-units = 256
debug = 0
lto = "off"
