[package]
name = "cookie_assignment"
version = "1.0.0"
edition = "2021"
resolver = "2"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.k8s-dev]
inherits = "dev"
opt-level = 1
incremental = true
codegen-units = 256
debug = 0
lto = "off"

[dependencies]
downloader_client = { path = "../downloader_client" }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "time", "net"], default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["registry", "fmt", "ansi", "env-filter"], default-features = false }
thiserror = { version = "2.0", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
toml = { version = "1.0.6", features = ["parse", "serde"], default-features = false }
