[package]
name = "ytdl_tg_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
ytdl_tg_bot_proto = { path = "../proto" }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "process", "sync", "fs", "io-util", "time"], default-features = false }
tonic = { version = "0.12", features = ["transport"] }
tokio-stream = { version = "0.1", default-features = false }
nix = { version = "0.31", features = ["fs"], default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["registry", "fmt", "ansi", "env-filter"], default-features = false }
thiserror = { version = "2.0", default-features = false }
tempfile = { version = "3.9", default-features = false }
tokio-util = { version = "0.7", default-features = false }
futures-util = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", features = ["std"], default-features = false }
bytes = { version = "1", default-features = false }
backoff = { version = "0.4", features = ["tokio"], default-features = false }
toml = { version = "1.0.6", features = ["parse", "serde"], default-features = false }
anyhow = { version = "1.0", default-features = false }
mutagen-rs = { version = "0.2.5", default-features = false }
url = { version = "2.5", features = ["serde"], default-features = false }
