[package]
name = "ytdl_tg_downloader"
version = "1.0.0"
edition = "2021"
resolver = "2"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.k8s-dev]
inherits = "dev"
opt-level = 1
incremental = true
codegen-units = 256
debug = 0
lto = "off"

[dependencies]
ytdl_tg_bot_proto = { path = "../proto" }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "process", "sync", "fs", "io-util", "time", "signal"], default-features = false }
tonic = { version = "0.14", features = ["transport", "tls-ring", "tls-webpki-roots"], default-features = false }
tokio-stream = { version = "0.1", default-features = false }
nix = { version = "0.31", features = ["fs"], default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["registry", "fmt", "ansi", "env-filter"], default-features = false }
thiserror = { version = "2.0", default-features = false }
tempfile = { version = "3.9", default-features = false }
tokio-util = { version = "0.7", default-features = false }
futures-util = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", features = ["std"], default-features = false }
bytes = { version = "1", default-features = false }
backoff = { version = "0.4", features = ["tokio"], default-features = false }
toml = { version = "1.0.6", features = ["parse", "serde"], default-features = false }
mutagen-rs = { version = "0.2.5", default-features = false }
url = { version = "2.5", features = ["serde"], default-features = false }
