[package]
name = "downloader_client"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
proto = { path = "../proto" }
tokio = { version = "1.36", features = ["net"], default-features = false }
tonic = { version = "0.14", features = ["transport", "tls-ring", "tls-webpki-roots"], default-features = false }
tracing = { version = "0.1", default-features = false }
thiserror = { version = "2.0", default-features = false }
url = { version = "2.5", default-features = false }
bytes = { version = "1", default-features = false }

[profile.k8s-dev]
inherits = "dev"
opt-level = 1
incremental = true
codegen-units = 256
debug = 0
lto = "off"
