[package]
name = "downloader_client"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
bytes = { version = "1", default-features = false }
proto = { path = "../proto" }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.36", features = ["net"], default-features = false }
tonic = { version = "0.14", features = ["transport", "tls-ring", "tls-webpki-roots"], default-features = false }
tracing = { version = "0.1", default-features = false }
url = { version = "2.5", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1

[profile.k8s-dev]
inherits = "dev"
opt-level = 1
incremental = true
codegen-units = 256
debug = 0
lto = "off"
