[package]
name = "ytdl_tg_bot_proto"
version = "1.0.0"
edition = "2021"

[dependencies]
prost = { version = "0.14", features = ["derive"], default-features = false }
tonic = { version = "0.14", features = ["router", "transport", "codegen", "tls-webpki-roots", "zstd"], default-features = false }
tonic-prost = { version = "0.14", default-features = false }

[build-dependencies]
tonic-build = { version = "0.14", features = ["transport"], default-features = false }
tonic-prost-build = { version = "0.14", features = ["transport"], default-features = false }
